--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: validator
+name: easy_breezy_validator
 description: A new Flutter Package for validations.
 version: 0.0.1
-homepage: "validation"
+homepage: https://github.com/Mo0Khaled/easy-breezy-validation
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -14,6 +14,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.1
 
 flutter:
